--- a/courses/.htaccess
+++ b/courses/.htaccess
@@ -2,3 +2,5 @@ RewriteEngine On    # Turn on the rewriting engine
 RewriteRule ^create/?$ create.php [NC,L]
 RewriteRule ^read/?$ read.php [NC,L]
 RewriteRule ^read_one?$ read_one.php [NC,L]
+RewriteRule ^update?$ update.php [NC,L]
+RewriteRule ^delete?$ delete.php [NC,L]
