--- a/students/.htaccess
+++ b/students/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine On    # Turn on the rewriting engine
 RewriteRule ^create/?$ create.php [NC,L]
 RewriteRule ^read/?$ read.php [NC,L]
-RewriteRule ^read_one/id/([0-9]+)/?$ read_one.php?id=$1 [NC,L]
+RewriteRule ^read_one?$ read_one.php [NC,L]
+RewriteRule ^update?$ update.php [NC,L]
+RewriteRule ^delete?$ delete.php [NC,L]
